Fixes misaligned social icons.

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -43,6 +43,8 @@ ul {
 
 ul.socials {
     text-align: center;
+    margin: 0;
+    padding: 0;
 }
 
 ul.socials li {
@@ -50,10 +52,14 @@ ul.socials li {
     display: inline-block;
     margin-left: 0 auto;
     margin-right: 0 auto;
-    width: 50px;
-    font-size: 25px;
+    padding-right: 50px;
+    font-size: 2.0em;
     padding-top: 40px;
     padding-bottom: 40px;
+}
+
+ul.socials li:last-of-type {
+    padding-right: 0;
 }
 
 ul.socials li a i {
